Fixed Highscore spillage

--- a/client/src/pages/Highscores/Highscores.css
+++ b/client/src/pages/Highscores/Highscores.css
@@ -8,10 +8,10 @@ body {
    }
 
 .card {
-       height: 65%;
-       font-size: 2.5rem; 
+       font-size: 1rem; 
        width: fit-content;
        display: block; 
+       padding: 30px;
    } 
 
    
@@ -23,7 +23,6 @@ li {
 } 
 
 header {
-    font-size: 2.5rem;
     color: rgb(3, 99, 209);
     /* display: 'inline-block'; */
     font-style: oblique;
@@ -58,4 +57,10 @@ div {
 .player5 {
     color: #fff;
     justify-self: start;
+}
+
+@media screen and (min-width: 768px) {
+    .card {
+        font-size: 2.5rem;
+    }
 }
